--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="static/style.css">
 <head>
     <title>Uploaded Image</title>
 </head>
 <body>
-    <h1>Image Uploaded Successfully!</h1>
-    <img src="/uploads/{{ filename }}" alt="Uploaded Image">
-    <a href="/uploads/{{ filename }}" download>Download Image</a>
+<div id="all">
+    <div class="up-menu">
+        <button>лассо</button>
+        <button>карандаш</button>
+        <button>текст</button>
+    </div>
+<div id="menu-and-picture">
+    <div class="translation-menu">
+    <div>
+        <select name="models" id="model-select">
+      <option value="google_translate">Google переводчик</option>
+      <option value="test1">тест1</option>
+      <option value="test2">тест2</option>
+    </select>
+    </div>
+    <div>
+        <select name="languages" id="start-language-select">
+      <option value="English">English</option>
+      <option value="Japanese">Japanese</option>
+      <option value="Russian">Russian</option>
+    </select>
+    </div>
+    <div><textarea readonly="readonly"></textarea></div>
+    <div>
+        <select name="languages2" id="end-language-select">
+      <option value="English">English</option>
+      <option value="Japanese">Japanese</option>
+      <option value="Russian">Russian</option>
+    </select>
+    </div>
+    <div><textarea readonly="readonly"></textarea></div>
+    <div><button content="Translate"></button></div>
+</div>
+    <div>
+        <img src="/uploads/{{ filename }}" alt="Uploaded Image">
+        <a href="/uploads/{{ filename }}" download>Download Image</a>
+    </div>
+    <div class="text-menu">
+    <div>
+        <select name="fonts" id="fonts-select">
+      <option value="Times New Roman">English</option>
+      <option value="Arial">Japanese</option>
+      <option value="Comic Sans">Russian</option>
+    </select>
+    </div>
+    <div>
+        <select name="types" id="types-select">
+      <option value="Regular">English</option>
+      <option value="Bold">Japanese</option>
+      <option value="Thick">Russian</option>
+    </select>
+    </div>
+    <div>тут будет выбор размера</div>
+    <div>тут будет выбор цвета</div>
+    <div>тут будет выбор выравнивания</div>
+</div>
+</div>
+</div>
+
+
+
+
+
+
 </body>
 </html>
