--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,12 @@
 body {
   background-color: #1E2576; /* Цвет фона */
 }
+#picture-download{
+display:vertical;
+align-items:center;
+justify-content:center;
+}
+
 #all{
 display:vertical;
 align-items:center;
@@ -26,7 +32,7 @@ background-color:#7C7CD5;
 .button {
   background-color: #9ACCFB; /* Цвет кнопки */
   border: none; /* Убираем границу кнопки */
-  color: white; /* Цвет текста на кнопке */
+  color: black; /* Цвет текста на кнопке */
   padding: 15px 32px; /* Отступы внутри кнопки */
   text-align: center; /* Выравнивание текста по центру */
   text-decoration: none; /* Убираем подчеркивание у ссылок */
@@ -34,4 +40,36 @@ background-color:#7C7CD5;
   font-size: 16px; /* Размер шрифта */
   margin: 4px 2px; /* Внешние отступы кнопки */
   cursor: pointer; /* Изменение курсора при наведении на кнопку */
+  border-radius: 100px 100px 100px 100px / 200% 200%;
+}
+textarea{
+background:#C5DBF0;
+overflow-y: scroll;
+border: 1px solid #000;
+  /* Для хороших браузеров */
+  -moz-border-radius: 10px; /* Firefox */
+  -webkit-border-radius: 10px; /* Safari, Chrome */
+  -khtml-border-radius: 10px; /* KHTML */
+  border-radius: 10px; /* CSS3 */
+  /* Для плохих IE */
+  behavior: url(border-radius.htc);
+}
+select{
+border-radius:36px;
+  display:inline-block;
+  overflow:hidden;
+  background:#cccccc;
+  border:1px solid #cccccc;
+}
+option{
+width:140px;
+  height:40px;
+  border:0px;
+  outline:none;
+}
+.select1{
+background-color:#C5DBF0;
+}
+.select2{
+background-color:#9ACCFB;
 }
