--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="all">
-    <img src="../img/lasso.jpg"/>
+    <img src="static/lasso.png"/>
     <div class="up-menu">
         <button class="icon-btn" id="lasso"></button>
         <button class="icon-btn" id="pencil"></button>
