fixed crytical bug

--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,33 @@ align-items:center;
 justify-content:center;
 position: relative;
 }
+.hitbox {
+    position: absolute;
+    border: 2px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.hitbox[data-selected="true"] {
+    background-color: #4b9cd3; /* Darker blue */
+    border: 2px solid blue;
+}
+
+.hitbox-text {
+    color: #000000; /* White text */
+    text-align: center;
+    word-wrap: break-word;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
 
 #original-image {
     position: relative; /* обязательно должен быть position: relative; */
