styles and fixing bad rectangles and texts

--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -23,7 +23,7 @@
             <div>
                 <select class="select1" name="languages" id="start-language-select">
                     <option value="en">English</option>
-                    <option value="ja">Japanese</option>
+                    <option value="jp">Japanese</option>
                     <option value="ru">Russian</option>
                 </select>
             </div>
@@ -31,7 +31,7 @@
             <div>
                 <select class="select1" name="languages2" id="end-language-select">
                     <option value="en">English</option>
-                    <option value="ja">Japanese</option>
+                    <option value="jp">Japanese</option>
                     <option value="ru">Russian</option>
                 </select>
             </div>
